--- a/src/resources/mail/forgot_password.html
+++ b/src/resources/mail/forgot_password.html
@@ -1,1 +1,2 @@
-<p>Você esqueceu sua senha? Não tem problema, utilize esse token para recuperar sua senha: {{token}} </p>
+<p>Você esqueceu sua senha? Não tem problema, utilize esse token para recuperar sua senha: <a
+        href="http://localhost:8080/reset/{{token}}">Clique aqui.</a> </p>
